# Kurokawa

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
src/: Kurokawa.aps  Kurokawa.rc  kurokawa.cpp  kurokawa.h  kurokawa.ui  main.cpp
